--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,8 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 35rem;
-    height: 12rem;
+    width: 45rem;
+    height: 21rem;
     background-color: #fff;
     display: flex;
     align-items: center;
@@ -75,15 +75,15 @@ body {
     position: absolute;
     right: 1rem;
     bottom: 1rem;
-    width: 4.5rem;
-    height: 2rem;
+    width: 6.5rem;
+    height: 3rem;
     background-color: #fff;
     color: rgb(111, 35, 249);
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: 300;
     cursor: pointer;
     border: 0.1rem solid rgb(111, 35, 249);
-    border-radius: 0.2rem;
+    border-radius: 0.5rem;
     transition: all 0.2s;
 }
 
@@ -93,12 +93,20 @@ body {
 }
 
 .modal-show {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 400;
-    color: #222;
+    color: #666;
     text-align: center;
     line-height: 2;
 }
+
+.modal-show b {
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: #222;
+    text-align: center;
+}
+
 
 /* 모바일 메뉴 */
 .mobile-menu {
@@ -798,7 +806,6 @@ body {
     color: #fff;
     letter-spacing: 0.14rem;
     padding-top: 5rem;
-
     opacity: 0;
     transform: translateY(30rem);
     transition: transform 1s, opacity 1s;
